--- a/style.css
+++ b/style.css
@@ -1,5 +1,39 @@
+header {
+  text-align: center;
+}
 body {
   width: 100%;
   height: 100%;
   margin: 0;
+  
+}
+h1 {
+  color: red;
+}
+a:link, a:visited {
+  background-color: #f44336;
+  color: white;
+  padding: 14px 25px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  border-radius: 10px;
+}
+
+a:hover, a:active {
+  background-color: red;
+}
+#featured-property {
+  margin-right: auto;
+  margin-left: auto;
+  width: 80%;
+}
+#details {
+  display: flex;
+  justify-content: space-between;
+  margin-left: 10px ;
+  margin-right: 10px ;
+  margin-top: 10px ;
+  margin-bottom: 10px ;
+
 }
